src/test/ui/typeck/typeck-unsafe-always-share.stderr
error[E0277]: `UnsafeCell<MySync<{integer}>>` cannot be shared between threads safely
  --> $DIR/typeck-unsafe-always-share.rs:19:10
   |
LL | fn test<T: Sync>(s: T) {}
   |            ---- required by this bound in `test`
...
LL |     test(us);
   |          ^^ `UnsafeCell<MySync<{integer}>>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `UnsafeCell<MySync<{integer}>>`

error[E0277]: `UnsafeCell<NoSync>` cannot be shared between threads safely
  --> $DIR/typeck-unsafe-always-share.rs:23:10
   |
LL | fn test<T: Sync>(s: T) {}
   |            ---- required by this bound in `test`
...
LL |     test(uns);
   |          ^^^ `UnsafeCell<NoSync>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `UnsafeCell<NoSync>`

error[E0277]: `UnsafeCell<NoSync>` cannot be shared between threads safely
  --> $DIR/typeck-unsafe-always-share.rs:27:5
   |
LL | fn test<T: Sync>(s: T) {}
   |            ---- required by this bound in `test`
...
LL |     test(ms);
   |     ^^^^ `UnsafeCell<NoSync>` cannot be shared between threads safely
   |
   = help: within `MySync<NoSync>`, the trait `Sync` is not implemented for `UnsafeCell<NoSync>`
   = note: required because it appears within the type `MySync<NoSync>`

error[E0277]: `NoSync` cannot be shared between threads safely
  --> $DIR/typeck-unsafe-always-share.rs:30:10
   |
LL | fn test<T: Sync>(s: T) {}
   |            ---- required by this bound in `test`
...
LL |     test(NoSync);
   |          ^^^^^^ `NoSync` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `NoSync`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
